[gd_scene load_steps=36 format=3 uid="uid://cf4upd0xdrxmy"]

[ext_resource type="Script" path="res://generation.gd" id="1_6jecg"]
[ext_resource type="Texture2D" uid="uid://k4xfxej2qnb8" path="res://ground/grass.png" id="2_iuewu"]
[ext_resource type="Script" path="res://player/player.gd" id="3_hwv4x"]
[ext_resource type="Texture2D" uid="uid://lvnqdhyhv2vi" path="res://player/player.png" id="4_vrih6"]
[ext_resource type="Texture2D" uid="uid://dlhpua4mvd3qb" path="res://player/void.png" id="5_e1oif"]
[ext_resource type="Script" path="res://player/chunk_loading.gd" id="5_lbiql"]
[ext_resource type="Texture2D" uid="uid://bm0mxhib3x8nn" path="res://gui/hotbar.png" id="6_wab48"]
[ext_resource type="Texture2D" uid="uid://ckuwbvoqdlls5" path="res://gui/hb_select.png" id="7_0mva6"]
[ext_resource type="PackedScene" uid="uid://bh0tlwurouhfa" path="res://scenes/item.tscn" id="7_1urob"]
[ext_resource type="Texture2D" uid="uid://cmcup06o3l3x7" path="res://gui/inv.png" id="7_n4rsq"]
[ext_resource type="Texture2D" uid="uid://dygr16dt35jfg" path="res://items/wood.png" id="10_hm1yb"]
[ext_resource type="Texture2D" uid="uid://cgmhuqw08l4gw" path="res://player/attack.png" id="11_x5hvy"]
[ext_resource type="Texture2D" uid="uid://bq4bhido07tb8" path="res://gui/bar_bottom.png" id="11_yve8n"]
[ext_resource type="Texture2D" uid="uid://bnpsgkqrm5r6s" path="res://gui/bar_over.png" id="12_ugu7j"]
[ext_resource type="Texture2D" uid="uid://bvpr6k5xe01tw" path="res://gui/bar_progress.png" id="13_oum0w"]
[ext_resource type="Texture2D" uid="uid://cktcyo6flgtii" path="res://gui/sat_bar_bottom.png" id="14_uly5n"]
[ext_resource type="Texture2D" uid="uid://bv5u355615874" path="res://gui/sat_bar_over.png" id="15_nokqy"]
[ext_resource type="Texture2D" uid="uid://bm6rhgbkuiyh2" path="res://gui/sat_bar_progress.png" id="16_5kut5"]
[ext_resource type="Texture2D" uid="uid://c05pk83haea2l" path="res://gui/you_died.png" id="17_otos4"]
[ext_resource type="Texture2D" uid="uid://c2ncs6f8tbi4e" path="res://gui/costyl.png" id="19_hiwf7"]
[ext_resource type="Texture2D" uid="uid://da78ge102emu1" path="res://objects/sprites/tree.png" id="20_ao1un"]
[ext_resource type="Texture2D" uid="uid://7q8mkgysgef4" path="res://gui/cursor.png" id="21_nesrk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lk2o3"]
size = Vector2(50, 48)

[sub_resource type="Animation" id="Animation_gi72u"]
resource_name = "damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rwhae"]
resource_name = "death"
length = 4.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/death:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CanvasLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.615686, 0.0235294, 0, 0), Color(0.615686, 0.0235294, 0, 0.301961)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7, 3.97, 4),
"transitions": PackedFloat32Array(1.68179, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 1.5708, 0.0]
}

[sub_resource type="Animation" id="Animation_mqq0o"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 11, 10, 13, 14, 13]
}

[sub_resource type="Animation" id="Animation_ig7ep"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 16, 15, 18, 19, 18]
}

[sub_resource type="Animation" id="Animation_jhmm5"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 6, 5, 8, 9, 8]
}

[sub_resource type="Animation" id="Animation_8q224"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0, 3, 4, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_htrj4"]
_data = {
"damage": SubResource("Animation_gi72u"),
"death": SubResource("Animation_rwhae"),
"walk_down": SubResource("Animation_mqq0o"),
"walk_left": SubResource("Animation_ig7ep"),
"walk_right": SubResource("Animation_jhmm5"),
"walk_up": SubResource("Animation_8q224")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dvld6"]
radius = 80.0
height = 198.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v330y"]
size = Vector2(2388, 1346)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6sj2e"]

[sub_resource type="Animation" id="Animation_ai1hq"]
resource_name = "day_night_cycle"
length = 24.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7, 8, 9, 22, 23, 24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.415686, 0.439216, 0.639216, 1), Color(0.47451, 0.545098, 0.658824, 1), Color(0.854902, 0.764706, 0.521569, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0.960784, 0.458824, 0.403922, 1), Color(0.415686, 0.439216, 0.639216, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q87h3"]
_data = {
"day_night_cycle": SubResource("Animation_ai1hq")
}

[node name="Node2D" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
texture_repeat = 1
script = ExtResource("1_6jecg")

[node name="Grass" type="Sprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
texture_repeat = 1
scale = Vector2(10, 10)
texture = ExtResource("2_iuewu")

[node name="player" type="CharacterBody2D" parent="."]
z_index = 5
y_sort_enabled = true
motion_mode = 1
platform_floor_layers = 4294967288
script = ExtResource("3_hwv4x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_lk2o3")

[node name="Sprite" type="Sprite2D" parent="player"]
texture_filter = 1
texture_repeat = 1
position = Vector2(0.999999, -3.8147e-06)
scale = Vector2(10, 10)
texture = ExtResource("4_vrih6")
offset = Vector2(0.9, -4.15)
hframes = 5
vframes = 8
frame = 10

[node name="Item" type="Sprite2D" parent="player"]
texture_filter = 1
texture_repeat = 1
position = Vector2(-1, -44)
scale = Vector2(10, 10)
texture = ExtResource("5_e1oif")
hframes = 5
vframes = 8
frame = 10

[node name="Camera2D" type="Camera2D" parent="player"]
texture_filter = 1
texture_repeat = 1
scale = Vector2(10, 10)
zoom = Vector2(0.5, 0.5)
script = ExtResource("5_lbiql")

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
libraries = {
"": SubResource("AnimationLibrary_htrj4")
}

[node name="damage_anim" type="AnimationPlayer" parent="player"]
libraries = {
"": SubResource("AnimationLibrary_htrj4")
}

[node name="attack" type="Area2D" parent="player"]
visible = false
position = Vector2(0, -30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/attack"]
position = Vector2(-36, 3)
shape = SubResource("CapsuleShape2D_dvld6")
disabled = true
one_way_collision_margin = 0.0
debug_color = Color(0.784314, 0.372549, 0.580392, 0.419608)

[node name="Attack" type="Sprite2D" parent="player/attack"]
position = Vector2(-73, -1.52588e-05)
scale = Vector2(10, 10)
texture = ExtResource("11_x5hvy")

[node name="nothin" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/nothin"]
visible = false
z_index = 1
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_v330y")

[node name="attack_timer" type="Timer" parent="player"]
wait_time = 0.1
one_shot = true

[node name="load_timer" type="Timer" parent="player"]
wait_time = 0.001
autostart = true

[node name="starvation" type="Timer" parent="player"]
wait_time = 5.0
autostart = true

[node name="nav_update" type="Timer" parent="player"]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="IngameUI" type="ReferenceRect" parent="CanvasLayer"]
texture_filter = 1
texture_repeat = 1
offset_top = -2.0
offset_right = 661.0
offset_bottom = 430.0
mouse_filter = 2

[node name="hotbar2" type="GridContainer" parent="CanvasLayer/IngameUI"]
layout_mode = 0
offset_left = 31.0
offset_top = 20.0
offset_right = 141.0
offset_bottom = 410.0
mouse_filter = 2
theme_override_constants/v_separation = 0

[node name="slot1" type="TextureRect" parent="CanvasLayer/IngameUI/hotbar2"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_0mva6")
expand_mode = 2

[node name="slot2" type="TextureRect" parent="CanvasLayer/IngameUI/hotbar2"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("6_wab48")
expand_mode = 2

[node name="slot3" type="TextureRect" parent="CanvasLayer/IngameUI/hotbar2"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("6_wab48")
expand_mode = 2

[node name="slot4" type="TextureRect" parent="CanvasLayer/IngameUI/hotbar2"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("6_wab48")
expand_mode = 2

[node name="inv" type="GridContainer" parent="CanvasLayer/IngameUI"]
layout_mode = 0
offset_left = 135.0
offset_top = 20.0
offset_right = 315.0
offset_bottom = 386.0
mouse_filter = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="slot1" type="TextureRect" parent="CanvasLayer/IngameUI/inv"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot2" type="TextureRect" parent="CanvasLayer/IngameUI/inv"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot3" type="TextureRect" parent="CanvasLayer/IngameUI/inv"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot4" type="TextureRect" parent="CanvasLayer/IngameUI/inv"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot5" type="TextureRect" parent="CanvasLayer/IngameUI/inv"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot6" type="TextureRect" parent="CanvasLayer/IngameUI/inv"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot7" type="TextureRect" parent="CanvasLayer/IngameUI/inv"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot8" type="TextureRect" parent="CanvasLayer/IngameUI/inv"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="tools" type="GridContainer" parent="CanvasLayer/IngameUI"]
layout_mode = 0
offset_left = 342.0
offset_top = 20.0
offset_right = 618.0
offset_bottom = 110.0
mouse_filter = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="slot1" type="TextureRect" parent="CanvasLayer/IngameUI/tools"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot2" type="TextureRect" parent="CanvasLayer/IngameUI/tools"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot3" type="TextureRect" parent="CanvasLayer/IngameUI/tools"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="craft" type="GridContainer" parent="CanvasLayer/IngameUI"]
layout_mode = 0
offset_left = 343.0
offset_top = 111.0
offset_right = 616.0
offset_bottom = 223.0
mouse_filter = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="slot1" type="TextureRect" parent="CanvasLayer/IngameUI/craft"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot2" type="TextureRect" parent="CanvasLayer/IngameUI/craft"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="slot3" type="TextureRect" parent="CanvasLayer/IngameUI/craft"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="result" type="GridContainer" parent="CanvasLayer/IngameUI"]
layout_mode = 0
offset_left = 344.0
offset_top = 200.0
offset_right = 437.0
offset_bottom = 292.0
mouse_filter = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="slot1" type="TextureRect" parent="CanvasLayer/IngameUI/result"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("7_n4rsq")

[node name="held_item" type="TextureRect" parent="CanvasLayer/IngameUI"]
visible = false
layout_mode = 1
anchors_preset = -1
offset_right = 60.0
offset_bottom = 60.0
pivot_offset = Vector2(30, 30)
mouse_filter = 2
texture = ExtResource("10_hm1yb")

[node name="Label" type="Label" parent="CanvasLayer/IngameUI/held_item"]
layout_mode = 0
offset_left = 42.0
offset_top = 42.0
offset_right = 71.0
offset_bottom = 68.0
text = "64"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -272.0
offset_top = 23.0
offset_right = -222.0
offset_bottom = 39.0
grow_horizontal = 0
scale = Vector2(5, 5)
theme_override_constants/separation = 2

[node name="hp" type="TextureProgressBar" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
max_value = 20.0
step = 0.001
value = 20.0
texture_under = ExtResource("11_yve8n")
texture_over = ExtResource("12_ugu7j")
texture_progress = ExtResource("13_oum0w")

[node name="hp2" type="TextureProgressBar" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
max_value = 40.0
step = 0.001
value = 40.0
texture_under = ExtResource("14_uly5n")
texture_over = ExtResource("15_nokqy")
texture_progress = ExtResource("16_5kut5")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 8145.0
offset_bottom = 5404.0
color = Color(0.615686, 0.0235294, 0, 0)

[node name="death" type="TextureRect" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0)
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -123.0
offset_right = 200.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_otos4")

[node name="costyl" type="TextureRect" parent="CanvasLayer"]
visible = false
z_index = 1000
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -104.0
offset_right = 144.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(100, 100)
pivot_offset = Vector2(114, 114)
mouse_filter = 2
texture = ExtResource("19_hiwf7")

[node name="Items" type="Marker2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -29)

[node name="Item" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-457, -12)
metadata/item_type = "stone_axe"

[node name="Item3" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-385, -12)
metadata/item_type = "copper_axe"

[node name="Item4" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-255, 143)
metadata/item_type = "steak"

[node name="Item5" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-416, -191)
metadata/item_type = "campfire"

[node name="Item6" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-179, -12)
metadata/item_type = "copper_knife"

[node name="Item7" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-243, -12)
metadata/item_type = "copper_shovel"

[node name="Item8" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-473, -189)
metadata/item_type = "campfire"

[node name="Item9" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-312, -9)
metadata/item_type = "copper_pick"

[node name="Item10" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-650, -18)

[node name="Item13" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-470, 147)
metadata/item_type = "wood"

[node name="Item16" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-524, 149)
metadata/item_type = "wood"

[node name="Item18" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-593, 148)
metadata/item_type = "copper_bar"

[node name="Item19" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-638, 106)
metadata/item_type = "copper_bar"

[node name="Item20" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-697, 161)
rotation = -2.51383
metadata/item_type = "copper_bar"

[node name="Item17" parent="Items" instance=ExtResource("7_1urob")]
position = Vector2(-404, 146)
metadata/item_type = "stick"

[node name="cursor" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.811765)
z_index = 10
scale = Vector2(10, 10)
texture = ExtResource("20_ao1un")
offset = Vector2(0, -21.485)

[node name="cursor" type="Sprite2D" parent="cursor"]
modulate = Color(1, 1, 1, 0.423529)
z_index = -1
texture = ExtResource("21_nesrk")

[node name="Area2D" type="Area2D" parent="cursor"]
scale = Vector2(0.1, 0.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="cursor/Area2D"]
scale = Vector2(3.545, 3.545)
shape = SubResource("RectangleShape2D_6sj2e")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(2, 7)
color = Color(0.415686, 0.439216, 0.639216, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasModulate"]
libraries = {
"": SubResource("AnimationLibrary_q87h3")
}

[node name="mobs" type="Marker2D" parent="."]
z_index = 5
y_sort_enabled = true

[connection signal="generate" from="player/Camera2D" to="." method="chunk_generate"]
[connection signal="animation_finished" from="player/AnimationPlayer" to="player" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="player/damage_anim" to="player" method="_on_animation_player_animation_finished"]
[connection signal="input_event" from="player/nothin" to="player" method="_on_nothin_input_event"]
[connection signal="timeout" from="player/attack_timer" to="player" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="player/load_timer" to="player/Camera2D" method="_on_load_timer_timeout"]
[connection signal="timeout" from="player/starvation" to="player" method="_on_starvation_timeout"]
[connection signal="timeout" from="player/nav_update" to="player/Camera2D" method="_on_nav_update_timeout"]
